--- a/(1)Entry/Basic grammar/first.html
+++ b/(1)Entry/Basic grammar/first.html
@@ -9,7 +9,8 @@
     <script>
         console.log('nihao');
     </script>
-    <script src="first.js"></script>
+    <!-- <script src="first.js"></script> -->
+    <script src="two.js"></script>
 </head>
 
 <body>
