对象和函数

--- a/(2)Data/index.html
+++ b/(2)Data/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>数据类型</title>
     <!-- <script src="first.js"></script> -->
-    <script src="two.js"></script>
+    <!-- <script src="two.js"></script> -->
+    <!-- <script src="object.js"></script> -->
+    <script src="funtwo.js"></script>
 </head>
 
 <body>
